# ArcBot_LLM

./: .gitignore  README_CONTEXT_FEATURE.md  config.py  context_utils.py  llm.py  llm_api.py  logger.py  main.py  pyproject.toml  requirements.txt  test_history_feature.py  updater.py
.github/scripts/: create_release.py
.github/workflows/: auto-version.yml
adapters/: base.py  napcat_adapter.py
adapters/napcat/: chat_logic.py  command_handler.py  friend_manager.py  message_sender.py  post.py
common/: text.py
config/: blacklist.json  config.json  image_system_prompt.txt  system_prompt.txt  whitelist.json
core/: chat_service.py  event_bus.py  prompt_builder.py  role_manager.py
handlers/: dragon_handler.py  music_handler.py
messaging/: ai_parser.py  content.py
napcat/: chat_logic.py  command_handler.py  get.py  message_types.py  post.py
security/: whitelist.py
storage/: emoji_storage.py  history.py  message_context.py  napcat_history.py
tests/: test_image_recognition.py
tools/: __init__.py  base.py  context_tool.py  web_tools.py
utils/: ai_message_parser.py  blacklist.py  dragon_handler.py  emoji_storage.py  event_manager.py  files.py  group_activity.py  message_content.py  music_handler.py  notebook.py  role_manager.py  whitelist.py
